@@ -104,6 +104,8 @@
         -e                        Launch external test with an executable file
         --fullscreen              Run Web API test in full screen mode
         --non-active              Disable the ability to set the result of core manual cases from the console
+        --enable-memory-collection
+                                  Enable the ability to release memory when the free memory is less than 100M
         --version                 Show version information
         -h, --help                Show this help message and exit
 
